{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 2027,
  "lineage": "8e3ecb63-15e0-9a42-1fd1-8a30a7966bcd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca688f4217aab61b",
            "arn": "arn:aws:ec2:us-east-1:895169747731:instance/i-08fd028c1261acd26",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-soc-web-instance-profile",
            "id": "i-08fd028c1261acd26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dc5d00a758557019"
              }
            ],
            "primary_network_interface_id": "eni-0dc5d00a758557019",
            "private_dns": "ip-10-10-1-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.128",
            "public_dns": "ec2-52-90-121-134.compute-1.amazonaws.com",
            "public_ip": "52.90.121.134",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e744370c2fc0e5c9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001a831bb009664ef",
            "tags": {
              "Name": "my-soc-web-0",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-web-0",
              "Project": "my-soc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f1d4a41f5a4e56e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "i-08fd028c1261acd26",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.web_app",
            "aws_cloudwatch_log_group.web_os",
            "aws_iam_instance_profile.web_instance",
            "aws_iam_role.web_instance",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca688f4217aab61b",
            "arn": "arn:aws:ec2:us-east-1:895169747731:instance/i-05609b0d2f9822266",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-soc-web-instance-profile",
            "id": "i-05609b0d2f9822266",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06450f5e279ceae65"
              }
            ],
            "primary_network_interface_id": "eni-06450f5e279ceae65",
            "private_dns": "ip-10-10-2-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.58",
            "public_dns": "ec2-44-200-200-130.compute-1.amazonaws.com",
            "public_ip": "44.200.200.130",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0309268c4a3a3bead",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e42c30591670e5be",
            "tags": {
              "Name": "my-soc-web-1",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-web-1",
              "Project": "my-soc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f1d4a41f5a4e56e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "i-05609b0d2f9822266",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.web_app",
            "aws_cloudwatch_log_group.web_os",
            "aws_iam_instance_profile.web_instance",
            "aws_iam_role.web_instance",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:internet-gateway/igw-069f24b1cc0b5c209",
            "id": "igw-069f24b1cc0b5c209",
            "owner_id": "895169747731",
            "region": "us-east-1",
            "tags": {
              "Name": "my-soc-igw",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-igw",
              "Project": "my-soc"
            },
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:loadbalancer/app/my-soc-alb/ed78520f3f3cde7c",
            "arn_suffix": "app/my-soc-alb/ed78520f3f3cde7c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-soc-alb-527134901.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:895169747731:loadbalancer/app/my-soc-alb/ed78520f3f3cde7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-soc-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-03713faa99ca148da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001a831bb009664ef"
              },
              {
                "subnet_id": "subnet-0e42c30591670e5be"
              }
            ],
            "subnets": [
              "subnet-001a831bb009664ef",
              "subnet-0e42c30591670e5be"
            ],
            "tags": {
              "Name": "my-soc-alb",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-alb",
              "Project": "my-soc"
            },
            "vpc_id": "vpc-0d6dd09b43721a810",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:loadbalancer/app/my-soc-alb/ed78520f3f3cde7c"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:listener/app/my-soc-alb/ed78520f3f3cde7c/51c073faecb70f10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:895169747731:listener/app/my-soc-alb/ed78520f3f3cde7c/51c073faecb70f10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:loadbalancer/app/my-soc-alb/ed78520f3f3cde7c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:listener/app/my-soc-alb/ed78520f3f3cde7c/51c073faecb70f10"
          },
          "dependencies": [
            "aws_lb.web",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d",
            "arn_suffix": "targetgroup/my-soc-tg/1fe69eb580c4488d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:895169747731:loadbalancer/app/my-soc-alb/ed78520f3f3cde7c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-soc-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-soc-tg",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-tg",
              "Project": "my-soc"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d-2025123017250474880000000a",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d",
            "target_id": "i-08fd028c1261acd26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudwatch_log_group.web_app",
            "aws_cloudwatch_log_group.web_os",
            "aws_iam_instance_profile.web_instance",
            "aws_iam_role.web_instance",
            "aws_instance.web",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d-20251230172503561600000009",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:895169747731:targetgroup/my-soc-tg/1fe69eb580c4488d",
            "target_id": "i-05609b0d2f9822266"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudwatch_log_group.web_app",
            "aws_cloudwatch_log_group.web_os",
            "aws_iam_instance_profile.web_instance",
            "aws_iam_role.web_instance",
            "aws_instance.web",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:route-table/rtb-01d3eb8e66a81d734",
            "id": "rtb-01d3eb8e66a81d734",
            "owner_id": "895169747731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069f24b1cc0b5c209",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-soc-public-rt",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-public-rt",
              "Project": "my-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "rtb-01d3eb8e66a81d734",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca33c455ab8677c4",
            "region": "us-east-1",
            "route_table_id": "rtb-01d3eb8e66a81d734",
            "subnet_id": "subnet-001a831bb009664ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2974ba114618e79",
            "region": "us-east-1",
            "route_table_id": "rtb-01d3eb8e66a81d734",
            "subnet_id": "subnet-0e42c30591670e5be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:security-group/sg-03713faa99ca148da",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03713faa99ca148da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-soc-alb-sg",
            "name_prefix": "",
            "owner_id": "895169747731",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-soc-alb-sg",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-alb-sg",
              "Project": "my-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "sg-03713faa99ca148da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quarantine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:security-group/sg-06b81328f419d3df6",
            "description": "Isolation SG for quarantined instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b81328f419d3df6",
            "ingress": [],
            "name": "my-soc-quarantine-sg",
            "name_prefix": "",
            "owner_id": "895169747731",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-soc-quarantine-sg",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-quarantine-sg",
              "Project": "my-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "sg-06b81328f419d3df6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:security-group/sg-07f1d4a41f5a4e56e",
            "description": "Web server SG (behind ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f1d4a41f5a4e56e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03713faa99ca148da"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-soc-web-sg",
            "name_prefix": "",
            "owner_id": "895169747731",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-soc-web-sg",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-web-sg",
              "Project": "my-soc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "sg-07f1d4a41f5a4e56e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:subnet/subnet-001a831bb009664ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001a831bb009664ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "895169747731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-soc-public-az1",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-public-az1",
              "Project": "my-soc"
            },
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "subnet-001a831bb009664ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:subnet/subnet-0e42c30591670e5be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e42c30591670e5be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "895169747731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-soc-public-az2",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-public-az2",
              "Project": "my-soc"
            },
            "vpc_id": "vpc-0d6dd09b43721a810"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "subnet-0e42c30591670e5be",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:895169747731:vpc/vpc-0d6dd09b43721a810",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c370fdbeb86cce93",
            "default_route_table_id": "rtb-09a05077b1d0e8fe1",
            "default_security_group_id": "sg-08216128afd0017a2",
            "dhcp_options_id": "dopt-09632bec5f586e966",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6dd09b43721a810",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a05077b1d0e8fe1",
            "owner_id": "895169747731",
            "region": "us-east-1",
            "tags": {
              "Name": "my-soc-vpc",
              "Project": "my-soc"
            },
            "tags_all": {
              "Name": "my-soc-vpc",
              "Project": "my-soc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "895169747731",
            "id": "vpc-0d6dd09b43721a810",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}